--- a/window.html
+++ b/window.html
@@ -1,18 +1,10 @@
 <div id="windowcontainer">
-    <div class="window">
-        <div class="windowcontrolls"><div class="windowicon"><img src="img/wan.png"></div><a href="#" rel="modal:close"><img class="windowbuttons" src="img/buttons.png"></a></div>
-        <div class="windowcontentcontainer">
+    <div id="window">
+        <div id="windowcontrolls"><div id="windowicon"><img src="img/wan.png"></div><a href="#" onclick(hideWindow(windowcontainer))><img id="windowbuttons" src="img/buttons.png"></a></div>
+        <div id="windowcontentcontainer">
             options
+            
             <div id="windowcontent">content</div>
         </div>
     </div>
 </div>
-
-<script>
-$(document).ready(function(){
-    $( "#windowcontainer" ).resizable();
-
-    $( "#windowcontainer" ).draggable();
-    
-} );
-</script>
